feat: cache improvements

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,12 @@ spring.application.version=1.0.0
 springdoc.debug=true
 logging.level.org.springdoc=DEBUG
 springdoc.cache.disabled=true
+
+# External service configuration
+external.percentage.min=1.0
+external.percentage.max=20.0
+external.percentage.failure-rate=0.1
+
+# Cache configuration
+spring.cache.caffeine.spec=maximumSize=100,expireAfterWrite=30m
+spring.task.scheduling.enabled=true
